--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.7.2
+cloudinary==1.38.0
 Django==3.2.24
 django-allauth==0.41.0
+django-countries==7.2.1
+django-crispy-forms==1.14.0
 oauthlib==3.2.2
 pillow==10.2.0
 python3-openid==3.2.0
